# CryptLog

./: .gitignore  Makefile  README.md
awsbench/: main.go
benchmarks/: Cargo.toml  delayed.csv  graphs.R  rand.csv
benchmarks/src/: main.rs
builder/: Dockerfile
client/: Cargo.toml
client-src/src/: main.rs
client/src/: app.yml
dynamodb/proxy/: main.go  main_test.go
dynamodb/src/dynamodb-proxy/: main.go
server-src/: Cargo.toml
server-src/src/: main.rs
server/src/: app.yml
smr/: Cargo.toml
smr/src/: converters.rs  ds.rs  encryptors.rs  hashmap.rs  http_data.rs  http_server.rs  indexed_queue.rs  lib.rs  maps.rs  ore.rs  runtime.rs  vm.rs
smr/tests/: lib.rs
