[package]
name = "smr"
version = "0.1.0"
authors = ["Iulia Tamas <iulia.tamas@yale.edu>",
          "Dylan Visher <dvisher1@gmail.com>"]

[dependencies]
rustc-serialize = "0.3"
hyper = "0.7"
chan = "0.1.14"
serde = "*"
serde_json = "*"
serde_macros = "*"
rpaillier = { git = "https://github.com/iuliatamas/rpaillier.git" }
ramp = "0.2.2"
rand = "^0.3"
openssl = "0.7.6"
byteorder = "0.4.2"
